# GPU-accelerated-tree-search-Chapel

./: CITATION.cff  CONTRIBUTORS.md  LICENSE  README.md  launch_nqueens_inter.sh  launch_nqueens_inter_no_ws.sh  launch_nqueens_intra.sh  launch_pfsp_inter_500k.sh  launch_pfsp_inter_50k.sh  launch_pfsp_inter_no_ws_500k.sh  launch_pfsp_intra_500k.sh  launch_pfsp_intra_50k.sh  main_nqueens.chpl  main_pfsp.chpl  makefile  nqueens_chpl.chpl  nqueens_dist_multigpu_chpl.chpl  nqueens_dist_multigpu_chpl_no_ws.chpl  nqueens_gpu_chpl.chpl  nqueens_gpu_unified_mem_chpl.chpl  nqueens_multigpu_chpl.chpl  nqueens_unified_mem_chpl.chpl  pfsp_chpl.chpl  pfsp_dist_multigpu_chpl.chpl  pfsp_dist_multigpu_chpl_no_ws.chpl  pfsp_gpu_chpl.chpl  pfsp_multigpu_chpl.chpl  qap_gpu_glb.chpl  qap_gpu_hhb.chpl  qap_multigpu_glb.chpl  qap_sequential_glb.chpl  qap_sequential_hhb.chpl  qubitAlloc_chpl.chpl  qubitAlloc_gpu_chpl.chpl  qubitAlloc_gpu_glb_chpl.chpl  qubitAlloc_gpu_hhb_chpl.chpl  qubitAlloc_multigpu_glb_chpl.chpl
baseline/: makefile  nqueens_c.c  nqueens_cuda.cu  nqueens_gpu_cuda.cu  nqueens_gpu_unified_mem_cuda.cu  nqueens_multigpu_cuda.cu  nqueens_unified_mem_cuda.cu
baselines/: makefile  nqueens_gpu_cuda.cu  nqueens_gpu_unified_mem_cuda.cu  nqueens_multigpu_cuda.cu
baselines/pfsp/: CMakeLists.txt  README.md  bash_hip.sh  evaluate.cu  evaluate.h  makefile  parameters.h  pfsp_c.c  pfsp_dist_dyn_multigpu_cuda.c  pfsp_dist_multigpu_cuda.c  pfsp_gpu_cuda.c  pfsp_gpu_cuda.cu  pfsp_gpu_hip.cu  pfsp_multi_gpu_cuda.c  pfsp_multigpu_cuda.c  pfsp_multigpu_hip.cu
baselines/pfsp/lib/: Auxiliary.c  Auxiliary.h  PFSP_node.c  PFSP_node.h  Pool.c  Pool.h  Pool_ext.c  Pool_ext.h  Pool_multi.c  Pool_multi.h  c_bound_johnson.c  c_bound_johnson.h  c_bound_johnson_gpu_cuda.cu  c_bound_johnson_gpu_cuda.h  c_bound_simple.c  c_bound_simple.h  c_bound_simple_gpu_cuda.cu  c_bound_simple_gpu_cuda.h  c_bounds_gpu.cu  c_taillard.c  c_taillard.h  evaluate.cu  evaluate.h
chpl_config/: README.md  g5k_dist_multigpu_amd.sh  g5k_dist_multigpu_nvidia.sh  g5k_multicore_gpu_amd.sh  g5k_multicore_gpu_array_on_device.sh  g5k_multicore_gpu_array_on_device_amd.sh  g5k_multicore_gpu_array_on_device_nvidia.sh  g5k_multicore_gpu_nvidia.sh  g5k_multicore_gpu_unified_memory.sh  g5k_multicore_gpu_unified_memory_amd.sh  g5k_multicore_gpu_unified_memory_nvidia.sh  g5k_multigpu_amd.sh  g5k_multigpu_nvidia.sh  (+5 more)
(+44 files in other folders)
